2005-08-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/lily-guile.cc (gulp_file_to_string): take size argument.

	* lily/general-scheme.cc (LY_DEFINE): take optional size argument.

	* input/regression/tie-manual.ly: new file

	* input/regression/tie-chord.ly: update.

	* flower/include/interval.hh (struct Interval_t): 

	* lily/tie.cc (distance): new function 
	(height): new function.
	(init): new function
	(Tie_details): new struct.

	* lily/skyline.cc (skyline_height): new function.

	* lily/tie-column.cc (set_chord_outlines): new function.
	(new_directions): read tie-configuration

	* lily/skyline.cc: fix ASCII art.
	
2005-08-22  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* python/convertrules.py (string_or_scheme): Fix spelling error

2005-08-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>
	
	* lily/tie-column.cc (set_directions): set directions only once.
	(add_configuration): new function.

	* lily/tie.cc (set_control_points): new function

	* lily/tie-column.cc (new_directions): new function.

	* ly/music-functions-init.ly: set 'pitch property
	iso. trill-pitch. This makes \relative work with \pitchedTrill

	* lily/tie.cc (get_configuration): new function. Don't generate
	control points, rather, generate configuration.
	remove head-pair property.

	* lily/include/tie.hh (struct Tie_configuration): new struct.

2005-08-22  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/topdocs/NEWS.tely: clarify.

2005-08-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tie.cc: remove minimum-length

	* scm/define-grob-properties.scm (all-user-grob-properties):
	remove staffline-clearance, y-offset 

	* input/regression/tie-dots.ly (Module): remove.

	* lily/tie.cc (get_control_points): rewrite. Put short ties in
	staff-spaces, make long ties cross staff lines. Avoid flags and dots.

	* input/regression/tie-single.ly: new file.

2005-08-21  Graham Percival  <gpermus@gmail.com>

	* ly/bagpipe.ly: fix compile problem.

2005-08-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>
